hsreplaynet/static/styles/components.scss
/* ... */
.animated-list {
	overflow: hidden;
	position: relative;
}

.animated-list-item {
	position: absolute;
	display: flex;
	justify-content: center;
	width: 100%;
	transition: top 0.7s ease-in-out;
	padding: 1px 0;
}

.archetype-signature h3 {
	background: #1d3657;
	color: white;
	font-size: 16px;
	margin-bottom: 0;
	padding: 7px 0;
	text-align: center;
	text-transform: uppercase;
}

.rank-picker {
	display: flex;
	flex-wrap: wrap;
	user-select: none;

	.rank-selector {
		border-bottom: 1px solid $darkblue;
		cursor: pointer;
		display: block;
		filter: grayscale(0.9);
		position: relative;
		width: 18%;

		&.rank-selector-legend {
			width: 90%;
		}

		> img {
			display: block;
			height: 100%;
			margin: 0 auto;
			max-height: 45px;
			max-width: 45px;
			width: 100%;
		}

		> span {
			font-size: 15px;
			font-weight: bold;
			left: 0;
			line-height: 45px;
			position: absolute;
			text-align: center;
			top: 0;
			width: 100%;
			text-shadow: -1px -1px 0 #000,
				1px -1px 0 #000,
				-1px 1px 0 #000,
				1px 1px 0 #000;
		}

		&:hover {
			background: $lightblue1;
			filter: grayscale(0);
		}

		&.selected {
			background: $lightcyan;
			filter: grayscale(0);

			&:hover {
				background: $lightercyan;
			}
		}
	}

	.row-selector {
		align-items: center;
		border-bottom: 1px solid $darkblue;
		cursor: pointer;
		display: flex;
		font-size: 12px;
		text-align: center;
		width: 10%;

		.glyphicon {
			text-align: center;
			width: 100%;
		}

		&:hover {
			background: $lightblue1;
		}

		&.selected {
			background: $lightcyan;

			&:hover {
				background: $lightercyan;
			}
		}

		&.only {
			color: gray;

			&:hover {
				background: $lightcyan;
			}
		}
	}
}

.stream-list {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: center;
	list-style-type: none;
	padding-left: 0;
	margin-top: 10px;

	> li {
		flex: 1;
		min-width: 300px;
		max-width: 400px;
		margin: 10px;
	}
}

.stream-thumbnail {
	display: inline-block;
	width: 100%;

	> figure {
		overflow: hidden;
		width: 100%;
		position: relative;

		> img {
			display: block;
			height: auto;
			width: 100%;
		}

		> figcaption {
			color: black;
			justify-content: space-between;
			white-space: nowrap;
			width: 100%;
			margin-top: 0.25em;

			&, * {
				overflow: hidden;
				text-overflow: ellipsis;
			}

			strong {
				display: block;
				width: 100%;
			}

			span {
				float: right;
			}
		}

		> aside {
			position: absolute;
			bottom: 3.5em;
			right: 0;
		}
	}

	&:hover {
		text-decoration: none;

		> figure {
			> figcaption strong {
				text-decoration: underline;
			}

			> img {
				filter: brightness(65%);
			}

		}

		.stream-thumbnail-default-image {
			color: rgb(120, 120, 120);
		}
	}
}

.stream-thumbnail-default-image {
	position: relative;
	width: 100%;
	color: rgb(191, 191, 191);
	background-color: rgb(225, 225, 225);
	font-size: 3em;
	border: solid 1px rgb(191, 191, 191);

	> * {
		position: absolute;
		width: 100%;
		height: 100%;
		display: flex;
		justify-content: center;
		align-items: center;
	}
}

.error-reporter {
	margin-top: 4rem;
	font-size: 2rem;

	h1 {
		font-size: 3.5rem;
		font-weight: normal;
	}

	pre {
		font-size: 2rem;
	}
}

.rank-icon-standalone {
	display: flex;
	flex-grow: 0;
	position: relative;

	align-items: center;
	justify-content: center;

	width: 100px;
	height: 100px;

	overflow: hidden;
	margin: -10px;

	img {
		position: absolute;
		width: 100%;
		height: 100%;
	}

	figcaption {
		position: absolute;
		text-align: center;

		font-size: 1.8em;
		font-weight: bold;
		color: white;

		text-shadow: -1px -1px 0 #000,
			-1px 1px 0 #000,
			1px 1px 0 #000,
			1px -1px 0 #000;
	}
}

.dust-filter {
	padding: 10px;
	display: flex;
	position: relative;

	.dust-preset {
		height: 34px;
		opacity: 0.3;
		margin-right: 10px;
		cursor: pointer;

		&.active {
			opacity: 1;
		}
	}
}

.account-dropdown {
	width: 15em;
}

